RESOLVED FIXED105943
Canvas blending tests fail on Mac WK2
https://bugs.webkit.org/show_bug.cgi?id=105943
Summary Canvas blending tests fail on Mac WK2
Ryosuke Niwa
Reported 2013-01-02 14:01:52 PST
It appears that http://trac.webkit.org/changeset/138334 didn’t update the WK2 code properly.
Attachments
Patch (3.08 KB, patch)
2013-01-03 11:04 PST, Rik Cabanier
no flags
Patch (6.20 KB, patch)
2013-01-03 11:32 PST, Rik Cabanier
no flags
Simon Fraser (smfr)
Comment 2 2013-01-02 21:50:43 PST
There should be no WK2-specific canvas code. Maybe this is the issue where composited content has color matching issues?
Rik Cabanier
Comment 3 2013-01-02 22:45:36 PST
(In reply to comment #2) > There should be no WK2-specific canvas code. Maybe this is the issue where composited content has color matching issues? It seems that the preference is not passed to the WebKitProcess so it always executes as accelerated, even when turned off.
Rik Cabanier
Comment 4 2013-01-03 11:04:00 PST
Simon Fraser (smfr)
Comment 5 2013-01-03 11:07:09 PST
Comment on attachment 181192 [details] Patch InternalSettings::Backup need to save/restore this pref too.
Rik Cabanier
Comment 6 2013-01-03 11:11:22 PST
(In reply to comment #5) > (From update of attachment 181192 [details]) > InternalSettings::Backup need to save/restore this pref too. will do
Rik Cabanier
Comment 7 2013-01-03 11:32:59 PST
Ryosuke Niwa
Comment 8 2013-01-03 11:45:02 PST
Comment on attachment 181194 [details] Patch Excellent! Thanks for the timely fix!
WebKit Review Bot
Comment 9 2013-01-03 12:06:05 PST
Comment on attachment 181194 [details] Patch Clearing flags on attachment: 181194 Committed r138726: <http://trac.webkit.org/changeset/138726>
WebKit Review Bot
Comment 10 2013-01-03 12:06:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.