Canvas blending tests fail on Mac WK2 https://bugs.webkit.org/show_bug.cgi?id=105943

Patch by Rik Cabanier <cabanier@adobe.com> on 2013-01-03
Reviewed by Simon Fraser.

Source/WebCore:

Tests that now pass:
    LayoutTests/fast/canvas/canvas-blend-solid.html
    LayoutTests/fast/canvas/canvas-blend-image.html

* testing/InternalSettings.cpp:
(WebCore::InternalSettings::Backup::Backup):
(WebCore::InternalSettings::Backup::restoreTo):
* testing/InternalSettings.h:
(Backup):

Source/WebKit2:

CanvasUsesAcceleratedDrawing preference was not passed to the WebProcess.

* WebProcess/InjectedBundle/InjectedBundle.cpp: Adds support for CanvasUsesAcceleratedDrawing to WK2
(WebKit::InjectedBundle::overrideBoolPreferenceForTestRunner):

LayoutTests:

* platform/mac-wk2/TestExpectations: updated expectations as the test now passes

Canonical link: https://commits.webkit.org/124205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138726 268f45cc-cd09-0410-ab3c-d52691b4dbfc